# KubeRCA

./: .codacy.yml  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  INVARIANTS.md  README.md  RELEASE_NOTES.md  artifacthub-repo.yml  index.yaml  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml
.github/workflows/: ci.yml  codacy.yml  codeql.yml  docker-publish.yml  e2e.yml  pypi-publish.yml
docs/: architecture.md  getting-started.md
docs/launch/: blog-post.md  linkedin-post.md  reddit-post.md  show-hn.md  twitter-thread.md
docs/plans/: 2026-02-21-invariants-stress-confidence-design.md  2026-02-21-invariants-stress-confidence-plan.md
e2e/: run_e2e.sh  values-local.yaml
helm/kuberca/: Chart.yaml  values.yaml
images/: site.webmanifest
kuberca/: __init__.py  app.py
kuberca/analyst/: coordinator.py  queue.py
kuberca/api/: routes.py  schemas.py
kuberca/cache/: redaction.py  resource_cache.py
kuberca/cli/: main.py
kuberca/collector/: event_watcher.py  node_watcher.py  pod_watcher.py  watcher.py
kuberca/graph/: dependency_graph.py
kuberca/ledger/: change_ledger.py  diff.py  sqlite_store.py
kuberca/llm/: analyzer.py  evidence.py
kuberca/mcp/: server.py
kuberca/models/: resources.py
kuberca/notifications/: slack.py
kuberca/observability/: logging.py  metrics.py
kuberca/rules/: __init__.py  base.py  confidence.py  r01_oom_killed.py  r02_crash_loop.py  r03_failed_scheduling.py  r04_image_pull.py  r05_hpa.py  r06_service_unreachable.py  r07_config_drift.py  r08_volume_mount.py  r09_node_pressure.py  r10_readiness_probe.py  r12_failedmount_secret.py  r13_failedmount_pvc.py  r14_failedmount_nfs.py  r15_failedscheduling_node.py  r16_exceed_quota.py  r17_evicted.py  r18_claim_lost.py
kuberca/scout/: detector.py
tests/integration/: test_api.py  test_load_stress.py
tests/unit/: test_addendum_gaps.py  test_analyst_coordinator.py  test_anomaly_detector.py  test_api_app.py  test_api_schemas.py  test_app_lifecycle.py  test_app_startup.py  test_cache_state_transitions.py  test_change_ledger.py  test_cli_main.py  test_collectors.py  test_confidence.py  test_confidence_stability.py  test_confidence_under_penalties.py  test_config.py  test_coordinator_helpers.py  test_coverage_boost.py  test_coverage_gaps.py  test_coverage_misc.py  test_dependency_graph.py  test_diff.py  test_evidence.py  test_invariants.py  test_llm_analyzer.py  test_mcp_server.py  test_models.py  test_notifications_email.py  test_notifications_init.py  test_notifications_manager.py  test_notifications_slack.py  test_notifications_webhook.py  test_production_wiring.py  test_quality_check.py  test_redaction.py  test_resource_cache_extended.py  test_rules_init.py  test_rules_r04_r10.py  test_rules_r11_r18.py  test_sqlite_store.py  test_watcher_base.py  (+1 more)
